examples/error/condition_error.c
void main(){
	float a;
	a = 9;

	if (5 + a){
		float b;
	}

	if (5 + a){
			float b;
	}else{
		bool c;
	}

	while(a + 3){

	}

}
